# finance

./: .gitignore  Cargo.toml  requirements.txt
conductor/: phase1-pt2-pyo3.md  phase1-pt3-ingest.md  phase1-pt4-friction.md  phase2-progress-tracker.md  phase2-sprint1-core-abm-skeleton.md  phase2-sprint2-market-bridge-state.md  phase2-sprint3-archetype-framework.md  phase2-sprint4-scheduler-multi-agent.md  phase2-sprint5-data-driven-runner.md  phase2-sprint6-hardening-handoff.md
core/abm/: README.md  __init__.py  arch.txt
core/abm/adapters/: __init__.py  lob.py
core/abm/domain/: __init__.py  agent.py  contracts.py
core/abm/policies/: __init__.py  archetypes.py  noop.py
core/abm/runner/: __init__.py  demo.py  model.py  seeding.py
core/abm/scheduler/: __init__.py  deterministic.py
core/abm/tests/: test_accounting.py  test_archetypes.py  test_contracts.py  test_market_bridge.py  test_runner.py
core/friction/: Cargo.toml  pyproject.toml  test_friction.py
core/friction/src/: lib.rs
core/lob-engine/: Cargo.toml  pyproject.toml
core/lob-engine/src/: bindings.rs  book_side.rs  event.rs  iceberg.rs  lib.rs  main.rs  order.rs  order_book.rs  price_level.rs  stop_order.rs  types.rs
core/lob-engine/tests/: test_lob.py
data/: pyproject.toml
data/finance_data/: cli.py  parsers.py  schemas.py  writer.py
data/store/l2_updates/symbol=BTC-USD/date=2024-01-01/: 5e4ce079b17d454bbd4d8c94d5beb20a-0.parquet
data/store/trades/symbol=BTC-USD/date=2024-01-01/: 3325e012beff4c0888033498bec89efa-0.parquet
data/tests/: test_ingestion_pipeline.py  test_parser.py  test_writer.py
docs/: ARCHETECTURE.txt  PYTHON_ENVIRONMENT.md  ROADMAP.md
