[package]
name = "friction"
version = "0.1.0"
edition = "2021"

[lib]
name = "friction"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
