[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "friction_engine"
version = "0.1.0"
requires-python = ">=3.8"
description = "Friction models (fees and slippage) for trading simulations"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "friction_engine"
